# rox

rox_bringup/: CMakeLists.txt  package.xml
rox_bringup/configs/gz_bridge/: gz_bridge_config.yaml
rox_bringup/configs/kinematics/: argo_kinematics.yaml  diff_kinematics.yaml
rox_bringup/configs/neo_relayboard_v3/generic/: RelayBoardV3Node.json  RelayBoardV3_Proxy.json
rox_bringup/configs/neo_relayboard_v3/generic/RelayBoardV3Node/remote_config/: ArgoDrive.json  BeagleBoard.json  CAN_Proxy_Devices.json  CAN_Proxy_Motors.json  CAN_Proxy_modules  ElmoMotorCAN.json  EtaLinkCharger.json  FlexiSoft.json  IOBoard.json  MultiPowrCharger.json  MurataBattery.json  SerialPort_FlexiSoft.json  SerialPort_modules
rox_bringup/configs/neo_relayboard_v3/rox/: parent
rox_bringup/configs/neo_relayboard_v3/rox-argo/: RelayBoardV3Node.json
rox_bringup/configs/neo_relayboard_v3/rox-argo-duo/: parent
rox_bringup/configs/neo_relayboard_v3/rox-argo-duo/RelayBoardV3Node/remote_config/: ArgoDrive_modules
rox_bringup/configs/neo_relayboard_v3/rox-argo/RelayBoardV3Node/remote_config/: ArgoDrive.json  CAN_Proxy_Motors.json
rox_bringup/configs/neo_relayboard_v3/rox-diff/: RelayBoardV3Node.json
rox_bringup/configs/neo_relayboard_v3/rox-diff/RelayBoardV3Node/remote_config/: ElmoMotorCAN.json
rox_bringup/configs/neo_relayboard_v3/rox-meca/: RelayBoardV3Node.json
rox_bringup/configs/neo_relayboard_v3/rox-trike/RelayBoardV3Node/remote_config/: ElmoMotorCAN.json  ElmoMotorCAN_modules
rox_bringup/configs/neo_relayboard_v3/rox/RelayBoardV3Node/remote_config/: battery_comm
rox_bringup/configs/phidget_imu/: imu_launch.py
rox_bringup/configs/sensors/: nanoscan_1.yaml  nanoscan_2.yaml
rox_bringup/configs/sick_lidar/: nanoscan_1.yaml
rox_bringup/configs/teleop/: diff_teleop.yaml
rox_bringup/configs/ur/: ur_control.launch.py
rox_bringup/launch/: bringup_launch.py  bringup_sim_launch.py  relayboard_v3.launch
rox_description/: CMakeLists.txt  package.xml
rox_description/launch/: description_launch.py
rox_description/meshes/: PSenScan.dae  argo_caster.dae  argo_wheel.dae  cabinet.dae  diff_caster.dae  diff_wheel.dae  long_frame.dae  sample.dae  short_frame.dae  simple_caster.dae
rox_description/urdf/: rox.urdf  rox.urdf.xacro
rox_navigation/: CMakeLists.txt  package.xml
rox_navigation/configs/: navigation.yaml  navigation_diff.yaml  navigation_long_frame.yaml  navigation_omni.yaml  navigation_short_frame.yaml
rox_navigation/configs/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
rox_navigation/launch/: mapping.launch.py  navigation.launch.py
rox_navigation/maps/: neo_workshop.pgm  neo_workshop.yaml
rox_rviz/: CMakelists.txt  package.xml
rox_rviz/configs/: rox.rviz
rox_rviz/launch/: rox_rviz_launch.py
(+15 files in other folders)
