<?xml version="1.0"?>
<package format="3">
  <name>rox_bringup</name>
  <version>0.1.0</version>
  <description>ROS 2 bringup package for ROX robots</description>

  <maintainer email="ros@neobotix.de">Pradheep Padmanabhan</maintainer>
  <license>BSD</license>
  <url type="website">http://www.neobotix-robots.com</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <!-- Dependencies for Sick SafetyScanners -->
  <exec_depend>sick_safetyscanners_base</exec_depend>
  <exec_depend>sick_safetyscanners2_interfaces</exec_depend>

  <!-- Dependencies for UR libraries -->
  <exec_depend>ur_client_library</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_msgs</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>

  <!-- Dependencies for Phidget IMU -->
  <exec_depend>phidgets-drivers</exec_depend>

  <!-- Dependencies for Neobotix Packages -->
  <exec_depend>neo_relayboard_v3</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
