<?xml version="1.0"?>
<package format="3">
  <name>rox_navigation</name>
  <version>0.1.0</version>
  <description>ROS 2 - Navigation package for ROX robots</description>

  <maintainer email="ros@neobotix.de">Neobotix</maintainer>
  <license>BSD</license>
  <url type="website">http://www.neobotix-robots.com</url>
  <author email="padmanabhan@neobotix.de">Pradheep Padmanabhan</author> 

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>neo_nav2_bringup</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>